install server packages

--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "better-queue": "^3.8.10",
+    "body-parser": "^1.19.0",
+    "cookie-session": "^1.4.0",
     "express": "^4.17.1",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "socket.io": "^2.3.0",
     "uuid": "^8.1.0"
   }
