--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,10 @@
     "body-parser": "^1.19.0",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
+    "knex": "^0.21.1",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
+    "pg": "^8.2.1",
     "socket.io": "^2.3.0",
     "uuid": "^8.1.0"
   }
