--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "http-proxy-middleware": "^1.0.4",
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
+    "react-compound-timer": "^1.2.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
