--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "styled-components": "^5.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server/index.js",
     "server": "nodemon server/index.js",
-    "dev": "concurrently \"npm start\" \"npm run server\"",
+    "dev": "concurrently \"react-scripts start\" \"npm run server\"",
     "build": "react-scripts build",
+    "heroku-postbuild": "npm run install && npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
