--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "server": "nodemon server/index.js",
     "dev": "concurrently \"react-scripts start\" \"npm run server\"",
     "build": "react-scripts build",
-    "heroku-postbuild": "npm run install && npm run build",
+    "heroku-postbuild": "npm run install && npm run build && npm install --prefix server",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
