--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.2",
     "concurrently": "^5.2.0",
     "http-proxy-middleware": "^1.0.4",
+    "lodash": "^4.17.15",
     "moment": "^2.26.0",
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
