--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-compound-timer": "^1.2.0",
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.3.1",
