--- a/package.json
+++ b/package.json
@@ -3,20 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-regular-svg-icons": "^5.13.0",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@fortawesome/react-fontawesome": "^0.1.10",
+    "@fortawesome/fontawesome-svg-core": "^1.2.29",
+    "@fortawesome/free-regular-svg-icons": "^5.13.1",
+    "@fortawesome/free-solid-svg-icons": "^5.13.1",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
-    "concurrently": "^5.2.0",
     "diff": "^4.0.2",
-    "http-proxy-middleware": "^1.0.4",
-    "lodash": "^4.17.15",
-    "moment": "^2.26.0",
-    "nodemon": "^2.0.4",
+    "lodash": "^4.17.19",
+    "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-compound-timer": "^1.2.0",
     "react-dom": "^16.13.1",
@@ -27,8 +24,6 @@
     "react-scripts": "3.3.1",
     "react-vim-wasm": "^0.1.4",
     "redux": "^4.0.5",
-    "redux-freeze": "^0.1.7",
-    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "styled-components": "^5.1.1"
@@ -58,5 +53,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^5.2.0",
+    "http-proxy-middleware": "^1.0.4",
+    "nodemon": "^2.0.4",
+    "redux-freeze": "^0.1.7",
+    "redux-logger": "^3.0.6"
   }
 }
