--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bad-words": "^3.0.3",
     "body-parser": "^1.19.0",
     "cookie-session": "^1.4.0",
     "diff": "^4.0.2",
