--- a/package.json
+++ b/package.json
@@ -63,5 +63,10 @@
     "react-snap": "^1.23.0",
     "redux-freeze": "^0.1.7",
     "redux-logger": "^3.0.6"
+  },
+  "reactSnap": {
+    "puppeteerArgs": [
+      "--no-sandbox"
+    ]
   }
 }
