--- a/package.json
+++ b/package.json
@@ -66,7 +66,11 @@
   },
   "reactSnap": {
     "puppeteerArgs": [
-      "--no-sandbox"
-    ]
+      "--no-sandbox",
+      "--disable-setuid-sandbox"
+    ],
+    "concurrency": 1,
+    "inlineCss": false,
+    "puppeteerExecutablePath": "/usr/bin/chromium-browser"
   }
 }
