--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "styled-components": "^5.1.1"
   },
   "scripts": {
-    "start": "node server/index.js",
+    "start": "react-scripts start",
     "server": "nodemon server/index.js",
     "dev": "concurrently \"react-scripts start\" \"npm run server\"",
     "build-sw": "node ./src/sw-build.js",
