--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "diff": "^4.0.2",
-    "http-proxy-middleware": "^1.0.5",
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
     "pg": "^8.3.0",
@@ -29,7 +28,8 @@
     "styled-components": "^5.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server/index.js",
+    "client": "react-scripts start",
     "server": "nodemon server/index.js",
     "dev": "concurrently \"react-scripts start\" \"npm run server\"",
     "build-sw": "node ./src/sw-build.js",
@@ -58,6 +58,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "concurrently": "^5.2.0",
+    "http-proxy-middleware": "^1.0.5",
     "nodemon": "^2.0.4",
     "redux-freeze": "^0.1.7",
     "redux-logger": "^3.0.6"
